# smake

./: ChangeLog  LICENSE  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config_ac.h.in  configure  configure.in  smake.1  smake.pod  smake_file.pl  smake_getopts.pl  smake_misc.pl  smake_smake.pl  smake_smkmf.pl  smake_version.pl
eg/: Makefile.in  SMakefile
etc/: crunch.in  newvers  unrequire.in
include/: README  smk.stddefs  smk.stdtargets  smk.subdir
t/: 01-plain.t  Makefile.in
